Add more activities

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -77,14 +77,13 @@
     nextcloud-file-url="<%= nextcloudFileURL %>"
     src="<%= getUrl(name + '.topic.metadata.json') %>"
     base-path="<%= getUrl('') %>"
-    keycloak-config='{"url": "<%= keyCloakBaseURL %>", "realm": "tugraz", "clientId": "<%= keyCloakClientId %>", "silentCheckSsoRedirectUri": "<%= getUrl('silent-check-sso.html') %>"}'
+    keycloak-config='{"url": "<%= keyCloakBaseURL %>", "realm": "tugraz", "clientId": "<%= keyCloakClientId %>", "silentCheckSsoRedirectUri": "<%= getUrl('silent-check-sso.html') %>", "forceLogin": "true"}'
     git-info='<%= buildInfo.info %>'
     build-url='<%= buildInfo.url %>'
     build-time='<%= buildInfo.time %>'
     env='<%= buildInfo.env %>'
     matomo-url="<%= matomoUrl %>"
     matomo-site-id="<%= matomoSiteId %>"
-    no-welcome-page
     html-overrides="global-override"
 ><dbp-loading-spinner></dbp-loading-spinner>
 <template slot="name">
