--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -8,12 +8,14 @@
     "en": "TU Graz Greenlight"
   },
   "description": {
-    "de": "Mit dieser Applikation können Sie Ihre 3G Überprüfung verwalten.",
-    "en": "With this application you can manage your 3G proof."
+    "de": "Mit dieser Applikation können Sie Ihren 3G Nachweis verwalten und Tickets für Orte ausstellen lassen.",
+    "en": "With this application you can manage your 3G proof and acquire tickets for places."
   },
   "routing_name": "greenlight",
   "activities": [
-    {"path": "dbp-activate-green-pass.metadata.json"}
+    {"path": "dbp-activate-green-pass.metadata.json"},
+    {"path": "dbp-acquire-ticket.metadata.json"},
+    {"path": "dbp-show-active-tickets.metadata.json"}
   ],
   "attributes": []
 }
