Add new activity for acquire tickets and validate 3g proofs

--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -14,7 +14,7 @@
   "routing_name": "greenlight",
   "activities": [
     {"path": "dbp-activate-green-pass.metadata.json"},
-    {"path": "dbp-acquire-ticket.metadata.json"},
+    {"path": "dbp-acquire-3g-ticket.metadata.json"},
     {"path": "dbp-show-active-tickets.metadata.json"}
   ],
   "attributes": []
