Prove of concept frontend validation 2/WIP

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -34,6 +34,9 @@
     <!-- Prevent Chrome/Edge from suggesting to translate the page -->
     <meta name="google" content="notranslate">
 
+    <!-- HCert decoding -->
+    <script src="<%= getPrivateUrl('hcert-kotlin.js') %>"></script>
+
     <!-- Font related CSS -->
     <style>
         @import "<%= getPrivateUrl('fonts/source-sans-pro/300.css') %>";
