Fix UI and request bugs in show active tickets, show preselected option instead of place-selector, add multiple text changes and fix some bugs

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -86,6 +86,7 @@
     matomo-url="<%= matomoUrl %>"
     matomo-site-id="<%= matomoSiteId %>"
     html-overrides="global-override"
+    show-preselected="true"
 ><dbp-loading-spinner></dbp-loading-spinner>
 <template slot="name">
     TU Graz<br />
