--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -35,7 +35,7 @@
     <meta name="google" content="notranslate">
 
     <!-- HCert decoding -->
-    <script src="<%= getPrivateUrl('hcert-kotlin.js') %>"></script>
+    <script src="<%= getUrl('hcert-kotlin.js') %>"></script>
 
     <!-- Font related CSS -->
     <style>
