--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -144,7 +144,7 @@
 </<%= name %>>
 
 <template id="global-override">
-    <template id="dbp-report-risk">
+    <template id="dbp-acquire-3g-ticket">
         <div slot="additional-information">
             <style>
                 .int-link-external{
@@ -181,95 +181,39 @@
                     font-size: 103%;
                 }
 
-                .int-email-external{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
-                }
-
-                .int-email-external:hover{
-                    background-color: black;
-                    color: white;
-                }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Sollten Sie als COVID-19-Verdachts- oder -Erkrankungsfall gelten, melden Sie sich bitte umgehend bei
-                    <a target="_blank" rel="noopener" href="mailto:coronameldung@tugraz.at" class="int-email-external"><span>coronameldung@tugraz.at</span></a>!
-                    <br /><br />
-                    Weitere Informationen über die aktuell geltenden Bestimmungen an der TU Graz erhalten Sie unter
-                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>.
+                    <p>
+                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Das Ticket und ein <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
+                            Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel)
+                        </a> sind nötig für den Zutritt an der TU Graz.
+                        <br /><br />
+                        Sie können Ihren 3G Nachweis vorab prüfen, indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen.
+                        Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer Kontrolle nachweisen können.
+                        <br /><br />
+                        Selbsttests des Landes Steiermarks können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
+                        <br /><br />
+                        Weitere Informationen über die aktuell geltenden Bestimmungen an der TU Graz erhalten Sie unter
+                        <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>
+                    </p>
                 </div>
                 <div slot="en">
-                    If you are a suspected COVID-19 case or a case of illness, please report this immediately to
-                    <a target="_blank" rel="noopener" href="mailto:coronameldung@tugraz.at" class="int-email-external"><span>coronameldung@tugraz.at</span></a>!
-                    <br /><br />
-                    For more information about the currently valid regulations at Graz University of Technology, please visit
-                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>.
-                </div>
-            </dbp-translated>
-        </div>
-    </template>
-    <template id="dbp-check-in-request">
-        <div slot="additional-information">
-            <style>
-                .int-link-external{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
-                }
-
-                .int-link-external:hover{
-                    background-color: black;
-                    color: white;
-                }
-
-                .int-link-external:after{
-                    content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
-                    padding: 0 0 0.25% 0;
-                    animation: 0.15s linkIconOut;
-                    font-size: 103%;
-                }
-
-                .int-link-external:hover::after{
-                    content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23FFF%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
-                    padding: 0 0 0.25% 0;
-                    animation: 0s linkIconIn;
-                    font-size: 103%;
-                }
-
-                .int-email-external{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
-                }
-
-                .int-email-external:hover{
-                    background-color: black;
-                    color: white;
-                }
-            </style>
-            <dbp-translated subscribe="lang">
-                <div slot="de">
-                    Sollten Sie als COVID-19-Verdachts- oder -Erkrankungsfall gelten, melden Sie sich bitte umgehend bei
-                    <a target="_blank" rel="noopener" href="mailto:coronameldung@tugraz.at" class="int-email-external"><span>coronameldung@tugraz.at</span></a>!
-                    <br /><br />
-                    Weitere Informationen über die aktuell geltenden Bestimmungen an der TU Graz erhalten Sie unter
-                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>.
-                </div>
-                <div slot="en">
-                    If you are a suspected COVID-19 case or a case of illness, please report this immediately to
-                    <a target="_blank" rel="noopener" href="mailto:coronameldung@tugraz.at" class="int-email-external"><span>coronameldung@tugraz.at</span></a>!
-                    <br /><br />
-                    For more information about the currently valid regulations at Graz University of Technology, please visit
-                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>.
+                    <p>
+                        With this application you can create an entry ticket. The ticket and a
+                        <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
+                            proof of a low epidemiological risk (3-G rule)
+                        </a>
+                        are necessary for access to TU Graz.
+                        <br /><br />
+                        You can check your 3G proof in advance by scanning the corresponding QR code or uploading an existing PDF or image and using it to issue a ticket for a location.
+                        Alternatively, you can manually confirm that you have a 3G certificate with you and that you can prove it in the event of a control.
+                        <br /><br />
+                        Self-tests from the country of Styria can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device. You need to make sure that your test result is still valid.
+                        <br /><br />
+                        For more information about the currently valid regulations at Graz University of Technology, please visit
+                        <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>
+                    </p>
                 </div>
             </dbp-translated>
         </div>
