--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -70,6 +70,7 @@
     provider-root
     lang="de" entry-point-url="<%= entryPointURL %>"
     gp-search-hash-string="<%= gpSearchQRString %>"
+    gp-search-self-test-string-array="<%= gpSearchSelfTestStringArray %>"
     preselected-option="<%= preselectedOption %>"
     file-handling-enabled-targets="local,nextcloud"
     nextcloud-web-app-password-url="<%= nextcloudWebAppPasswordURL %>"
