Add a dummy activity for showing the reference ticket

--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -14,7 +14,8 @@
   "routing_name": "greenlight",
   "activities": [
     {"path": "dbp-acquire-3g-ticket.metadata.json"},
-    {"path": "dbp-show-active-tickets.metadata.json"}
+    {"path": "dbp-show-active-tickets.metadata.json"},
+    {"path": "dbp-show-reference-ticket.metadata.json"}
   ],
   "attributes": []
 }
