--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="<%= getPrivateUrl('favicon.ico') %>">
     <link rel="icon" type="image/svg+xml" href="<%= getPrivateUrl('favicon.svg') %>" sizes="any">
 
-    <!-- PWA manfiest file -->
+    <!-- PWA manfest file -->
     <link rel="manifest" href="<%= getUrl(name + '.manifest.json') %>">
 
     <!-- PWA iphone -->
