--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -192,11 +192,20 @@
                         Sie können Ihren 3G Nachweis vorab prüfen, indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen.
                         Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer Kontrolle nachweisen können.
                         <br /><br />
-                        Selbsttests des Landes Steiermarks können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
+                        Selbsttests des Landes Steiermarks und Kärntens können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
                         <br /><br />
                         Weitere Informationen über die aktuell geltenden Bestimmungen an der TU Graz erhalten Sie unter
                         <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>
                     </p>
+                    <br />
+                    <div class="privacy-information">
+                        <p>
+                            Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz Greenlight" finden sie hier:
+                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Zur Datenschutzerklärung">
+                                <span><!---->Zur Datenschutzerklärung </span>
+                            </a>
+                        </p>
+                    </div>
                 </div>
                 <div slot="en">
                     <p>
@@ -209,11 +218,21 @@
                         You can check your 3G proof in advance by scanning the corresponding QR code or uploading an existing PDF or image and using it to issue a ticket for a location.
                         Alternatively, you can manually confirm that you have a 3G certificate with you and that you can prove it in the event of a control.
                         <br /><br />
-                        Self-tests from the country of Styria can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device. You need to make sure that your test result is still valid.
+                        Self-tests from the state of Styria and Carinthia can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device.
+                        You need to make sure that your test result is still valid.
                         <br /><br />
                         For more information about the currently valid regulations at Graz University of Technology, please visit
                         <a target="_blank" rel="noopener" href="https://www.tugraz.at/go/coronavirus" class="int-link-external"><span>www.tugraz.at/go/coronavirus</span></a>
                     </p>
+                    <br />
+                    <div class="privacy-information">
+                        <p>
+                            What does TU Graz do with your data? You can find the data protection declaration for the app "TU Graz Greenlight" here:
+                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Privacy statement">
+                                <span><!---->Privacy statement </span>
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </dbp-translated>
         </div>
