Move "TU Graz" to slot

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -99,6 +99,9 @@
         </div>
     </dbp-translated>
 </template>
+<template slot="title">
+    TU Graz Greenlight
+</template>
 <template slot="logo">
     <style>
         #main-logo {
