--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -1,11 +1,11 @@
 {
   "name": {
-    "de": "TU Graz Greenlight",
-    "en": "TU Graz Greenlight"
+    "de": "Greenlight",
+    "en": "Greenlight"
   },
   "short_name": {
-    "de": "TU Graz Greenlight",
-    "en": "TU Graz Greenlight"
+    "de": "Greenlight",
+    "en": "Greenlight"
   },
   "description": {
     "de": "Mit dieser Applikation können Sie Ihren 3G Nachweis verwalten und Tickets für Orte ausstellen lassen.",
