Change app name (lowercase) and change validation/error messages

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -100,7 +100,7 @@
     </dbp-translated>
 </template>
 <template slot="title">
-    TU Graz Greenlight
+    TU Graz greenlight
 </template>
 <template slot="logo">
     <style>
@@ -214,8 +214,8 @@
                             Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel)
                         </a> sind nötig für den Zutritt an der TU Graz.
                         <br /><br />
-                        Sie können Ihren 3G Nachweis vorab prüfen, indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen.
-                        Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer Kontrolle nachweisen können.
+                        Sie können Ihren 3-G-Nachweis vorab prüfen, indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen.
+                        Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer Kontrolle nachweisen können.
                         <br /><br />
                         Selbsttests des Landes Steiermarks und Kärntens können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
                         <br /><br />
@@ -225,7 +225,7 @@
                     <br />
                     <div class="privacy-information">
                         <p>
-                            Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz Greenlight" finden sie hier:
+                            Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden sie hier:
                             <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Zur Datenschutzerklärung">
                                 <span><!---->Zur Datenschutzerklärung </span>
                             </a>
@@ -240,8 +240,8 @@
                         </a>
                         are necessary for access to TU Graz.
                         <br /><br />
-                        You can check your 3G proof in advance by scanning the corresponding QR code or uploading an existing PDF or image and using it to issue a ticket for a location.
-                        Alternatively, you can manually confirm that you have a 3G certificate with you and that you can prove it in the event of a control.
+                        You can check your 3-G-evidence in advance by scanning the corresponding QR code or uploading an existing PDF or image and using it to issue a ticket for a location.
+                        Alternatively, you can manually confirm that you have a 3-G-certificate with you and that you can prove it in the event of a control.
                         <br /><br />
                         Self-tests from the state of Styria and Carinthia can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device.
                         You need to make sure that your test result is still valid.
@@ -252,7 +252,7 @@
                     <br />
                     <div class="privacy-information">
                         <p>
-                            What does TU Graz do with your data? You can find the data protection declaration for the app "TU Graz Greenlight" here:
+                            What does TU Graz do with your data? You can find the data protection declaration for the app "TU Graz greenlight" here:
                             <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Privacy statement">
                                 <span><!---->Privacy statement </span>
                             </a>
