Remove black line at white links

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -276,6 +276,14 @@
                     text-decoration: underline;
                 }
 
+                @media only screen
+                and (orientation: portrait)
+                and (max-width:768px) {
+                    .int-link-internal{
+                        border-bottom: 1px solid white;
+                    }
+                }
+
 
             </style>
             <dbp-translated subscribe="lang">
@@ -307,6 +315,14 @@
                     background-color: black;
                     color: white;
                     text-decoration: underline;
+                }
+
+                @media only screen
+                and (orientation: portrait)
+                and (max-width:768px) {
+                    .int-link-internal{
+                        border-bottom: 1px solid white;
+                    }
                 }
             </style>
             <dbp-translated subscribe="lang">
