--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -210,7 +210,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Das Ticket und ein <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
+                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Das Ticket (gültig für 24 Stunden) und ein <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
                             Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel)
                         </a> sind nötig für den Zutritt an der TU Graz.
                         <br /><br />
@@ -234,7 +234,7 @@
                 </div>
                 <div slot="en">
                     <p>
-                        With this application you can create an entry ticket. The ticket and a
+                        With this application you can create an entry ticket. The ticket (valid for 24 hours) and a
                         <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
                             proof of a low epidemiological risk (3-G rule)
                         </a>
