--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -332,15 +332,15 @@
                         <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                             <span>Eintrittsticket erstellen</span>
                         </a>
-                        ein neues Ticket anfordern und einen neuen Nachweis hochladen.
+                        einen neuen Nachweis hochladen, indem Sie ein neues Ticket anfordern.
                     </p>
                 </div>
                 <div slot="en">
-                    If the 3-G-evidence is no longer valid, you can request a new ticket under
+                    If the 3-G-evidence is no longer valid, you can go to
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Create entry ticket</span>
                     </a>
-                    and upload a new proof.
+                    and upload a new evidence by requesting a new ticket.
                 </div>
             </dbp-translated>
         </div>
