Update ticket UI

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -308,13 +308,13 @@
             <style>
                 .int-link-internal{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                    border-bottom: 1px solid white;
                 }
 
                 .int-link-internal:hover{
                     background-color: black;
                     color: white;
-                    text-decoration: underline;
+                    text-decoration: none;
                 }
 
                 @media only screen
