--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -210,12 +210,10 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Ein <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
+                        
+                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Sie können Ihren <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
                             Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel)
-                        </a> ist nötig für den Zutritt an der TU Graz.
-                        <br /><br />
-                        Sie können Ihren 3-G-Nachweis vorab prüfen, indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen.
-                        Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer Kontrolle nachweisen können.
+                        </a> hochladen, indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket ausstellen lassen.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
                             Selbsttests des Landes Steiermarks und Kärntens können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
@@ -236,14 +234,11 @@
                 </div>
                 <div slot="en">
                     <p>
-                        With this application you can create an entry ticket. A
+                        With this application you can create an entry ticket. You can check your
                         <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
                             proof of a low epidemiological risk (3-G rule)
                         </a>
-                        is necessary for access to TU Graz.
-                        <br /><br />
-                        You can check your 3-G-evidence in advance by scanning the corresponding QR code or uploading an existing PDF or image and using it to issue a ticket for a location.
-                        Alternatively, you can manually confirm that you have a 3-G-certificate with you and that you can prove it in the event of a control.
+                        by scanning the corresponding QR code or uploading an existing PDF or image and using it to create a ticket.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
                             Self-tests from the state of Styria and Carinthia can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device.
