Add translation show ticket

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -262,6 +262,16 @@
         </div>
     </template>
     <template id="dbp-show-active-tickets">
+        <div slot="internal-test-valid">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    TU Graz Test auf diesem Gerät importiert und gültig
+                </div>
+                <div slot="en">
+                    TU Graz test imported on this device and valid
+                </div>
+            </dbp-translated>
+        </div>
         <div slot="greenlight-reference">
             <style>
                 .int-link-internal{
