Change line and text in active tickets and reference ticket activity

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -365,6 +365,22 @@
             </dbp-translated>
         </div>
     </template>
+    <template id="dbp-show-reference-ticket">
+        <div slot="greenlight-reference-ticket-description">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    <p>
+                        Hier können Sie das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen. Dieses Ticket berechtigt nicht zum Eintritt an die TU Graz.
+                    </p>
+                </div>
+                <div slot="en">
+                    <p>
+                        Here you can view the currently valid reference ticket for the purpose of control. This ticket does not entitle you to enter the TU Graz.
+                    </p>
+                </div>
+            </dbp-translated>
+        </div>
+    </template>
 </template>
 
 <!-- Error handling for too old browsers -->
