--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -149,7 +149,7 @@
 
 <template id="global-override">
     <template id="dbp-acquire-3g-ticket">
-        <div slot="checkin-reference">
+        <div slot="contact-tracing-information">
             <style>
                 a.contact-tracing {
                     color: white;
