--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -151,7 +151,13 @@
     <template id="dbp-acquire-3g-ticket">
         <div slot="contact-tracing-information">
             <style>
-                a.contact-tracing {
+                .int-link-internal{
+                    transition: background-color 0.15s, color 0.15s;
+                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                }
+
+                .int-link-internal:hover{
+                    background-color: black;
                     color: white;
                     text-decoration: underline;
                 }
@@ -159,13 +165,13 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     Möchten Sie auch am Contact Tracing der TU Graz teilnehmen?
-                    <a href="https://checkin.tugraz.at" title="TU Graz check-in" target="_self" class="contact-tracing">
+                    <a href="https://checkin.tugraz.at" title="TU Graz check-in" target="_self" class="int-link-internal">
                         <span>TU Graz check-in.</span>
                     </a>
                 </div>
                 <div slot="en">
                     Do you want to use contact tracing at TU Graz?
-                    <a href="https://checkin.tugraz.at/en" title="TU Graz check-in" target="_self" class="contact-tracing">
+                    <a href="https://checkin.tugraz.at/en" title="TU Graz check-in" target="_self" class="int-link-internal">
                         <span>TU Graz check-in.</span>
                     </a>
                 </div>
