Refactor slot names

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -277,7 +277,7 @@
                 </div>
             </dbp-translated>
         </div>
-        <div slot="greenlight-internal-test-text">
+        <div slot="internal-test-text">
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     Der Test der Teststraße der TU Graz wurde beim Import validiert. Eine manuelle Kontrolle ist nur mit dem Originaldokument möglich.
@@ -393,7 +393,7 @@
         </div>
     </template>
     <template id="dbp-show-reference-ticket">
-        <div slot="greenlight-reference-ticket-description">
+        <div slot="description">
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
