--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -177,6 +177,16 @@
                 </div>
             </dbp-translated>
         </div>
+        <div slot="description">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    Erstellt ein Ticket für den Zugang zu Räumlichkeiten der TU Graz.
+                </div>
+                <div slot="en">
+                    Creates a ticket for access to premises of TU Graz.
+                </div>
+            </dbp-translated>
+        </div>
         <div slot="additional-information">
             <style>
                 .int-link-external{
@@ -216,12 +226,10 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Mit dieser Applikation können Sie ein Eintrittsticket erstellen. Sie können Ihren <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
-                            Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel)
-                        </a> hochladen, indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket ausstellen lassen.
+                        Sie können Ihren grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
-                            Selbsttests des Landes Steiermarks und Kärntens können ebenfalls hochgeladen werden. Diese werden aber im Gegensatz zu einem EU-weit gültigen Nachweis nicht am Gerät validiert. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist.
+                            Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert , aber nicht direkt in der Applikation validiert werden. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. Die Kontrolle erfolgt beim Einlass.
                             <br /><br />
                         <% } %>
                         Weitere Informationen über die aktuell geltenden Bestimmungen an der TU Graz erhalten Sie unter
@@ -239,15 +247,10 @@
                 </div>
                 <div slot="en">
                     <p>
-                        With this application you can create an entry ticket. You can check your
-                        <a target="_blank" rel="noopener" href="https://www.tugraz.at/icoe/coronavirus/ampelstatus-traffic-light-status/#c398763" class="int-link-external">
-                            proof of a low epidemiological risk (3-G rule)
-                        </a>
-                        by scanning the corresponding QR code or uploading an existing PDF or image and using it to create a ticket.
+                        You can import your green pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
-                            Self-tests from the state of Styria and Carinthia can also be uploaded. However, in contrast to an EU-wide valid proof, these are not validated on the device.
-                            You need to make sure that your test result is still valid.
+                            Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
                             <br /><br />
                         <% } %>
                         For more information about the currently valid regulations at Graz University of Technology, please visit
@@ -447,9 +450,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <h4>Informationen zum 3-G-Nachweis</h4>
-                    <!-- <p>
-                    Ist ein Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) lokal gespeichert, dann wird dieser hier angezeigt.
-                    </p> -->
+                    <br>
                     <p>
                         Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt. Der QR-Code kann mit
                         <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a> validiert werden.
@@ -462,9 +463,7 @@
                 </div>
                 <div slot="en">
                     <h4>Information about 3-G evidence</h4>
-                    <!-- <p>
-                    An evidence according to the 3-G evidence (German: geimpft, getestet, genesen – vaccinated, tested, recovered) shows your low epidemiological risk.
-                    </p> -->
+                    <br>
                     <p>
                         If a <strong>valid health certitificate</strong> is available on this device then its QR-code is displayed and the ticked is shown in color.
                         This QR-code can be checked with <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a>.
