Change description text for reference ticket

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -400,13 +400,27 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Hier können Sie das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen. Dieses Ticket berechtigt nicht zum Eintritt an die TU Graz.
+                        Hier können Sie das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen.
                     </p>
                 </div>
                 <div slot="en">
                     <p>
-                        Here you can view the currently valid reference ticket for the purpose of control. This ticket does not entitle you to enter the TU Graz.
+                        Here you can view the currently valid reference ticket for the purpose of control.
                     </p>
+                </div>
+            </dbp-translated>
+        </div>
+        <div slot="ticket-description">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    <span>
+                        Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt von dem auf diesem Gerät importierten 3-G-Nachweis ab. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
+                    </span>
+                </div>
+                <div slot="en">
+                    <span>
+                        The validity of the access test is displayed here. Depending on the available evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the university.
+                    </span>
                 </div>
             </dbp-translated>
         </div>
