Add documentation for new slot

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -385,7 +385,7 @@
                 </div>
                 <div slot="en">
                     <span>
-                        The validity of the access test is displayed here. Depending on the available evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the university.
+                        The validity of the access test is displayed here. Depending on the available evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the TU Graz.
                     </span>
                 </div>
             </dbp-translated>
