--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -393,12 +393,12 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt von dem auf diesem Gerät importierten 3-G-Nachweis ab. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
+                        An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt von dem auf diesem Gerät importierten 3-G-Nachweis ab. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        The validity of the access test is displayed here. Depending on the available evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the TU Graz.
+                        At this point the validity of an entrance ticket is displayed. Depending on the available 3-G evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the TU Graz.
                     </span>
                 </div>
             </dbp-translated>
@@ -451,7 +451,7 @@
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
                         Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen.
                         <br><br>
-                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Dieser Nachweis kann nur manuell validiert werden.
+                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.
                     </p>
                 </div>
                 <div slot="en">
@@ -464,7 +464,7 @@
                         If a <strong>self-test</strong> was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white.
                         This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner.
                         <br><br>
-                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The test has to be evaluated manually.
+                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.
                     </p>
                 </div>
             </dbp-translated>
