Change more text in reference ticket

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -393,12 +393,12 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt von dem auf diesem Gerät importierten 3-G-Nachweis ab. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
+                        An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        At this point the validity of an entrance ticket is displayed. Depending on the available 3-G evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the TU Graz.
+                        At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G evidence imported on the controlled person's device. The reference ticket does not entitle you to enter the TU Graz.
                     </span>
                 </div>
             </dbp-translated>
