Change contact email address

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -149,12 +149,12 @@
         <div slot="de" class="footer-links">
             <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/datenschutzerklaerung/">Datenschutz</a>
             <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/impressum/">Impressum</a>
-            <a rel="noopener" href="mailto:it-support@tugraz.at">Kontakt</a>
+            <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Kontakt</a>
         </div>
         <div slot="en" class="footer-links">
             <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/privacy-policy/">Privacy Policy</a>
             <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/legal-notice/">Legal Notice</a>
-            <a rel="noopener" href="mailto:it-support@tugraz.at">Contact</a>
+            <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Contact</a>
         </div>
     </dbp-translated>
 </template>
